# libzippp

./: CMakeLists.txt
cmake/: FindLIBZIP.cmake
src/: CMakeLists.txt
tests/: CMakeLists.txt
